--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">BingBong.com</a>
+      <a class="navbar-brand" href="#">Corvius Solutions LLC</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,7 +57,8 @@
 
     <div class="jumbtext">
       <h1 class="display-4">Wherever life takes you...</h1>
-      <p class="lead">We can help</p>
+      <h1 class="display-6 lead">We can help</h1>
+      
       <!-- <hr class="my-4"> -->
       <p></p>
       <p class="lead">
