--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light dark-mode">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Corvius Solutions LLC</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
+        aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
@@ -27,7 +28,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link dark switch" href="#">Dark Mode</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
@@ -36,7 +37,8 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+              aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="#">Action</a>
               <a class="dropdown-item" href="#">Another action</a>
@@ -58,7 +60,7 @@
     <div class="jumbtext">
       <h1 class="display-4">Wherever life takes you...</h1>
       <h1 class="display-6 lead">We can help</h1>
-      
+
       <!-- <hr class="my-4"> -->
       <p></p>
       <p class="lead">
@@ -66,9 +68,67 @@
       </p>
     </div>
   </div>
+  <pre>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    magna aliqua. Scelerisque eu ultrices vitae auctor eu augue. Quisque id diam vel quam elementum pulvinar etiam. Cras
+    tincidunt lobortis feugiat vivamus at. Sagittis purus sit amet volutpat consequat mauris. Viverra nam libero justo
+    laoreet sit. Nec nam aliquam sem et tortor consequat. Venenatis a condimentum vitae sapien. Sit amet purus gravida
+    quis blandit. Cras semper auctor neque vitae tempus quam. Justo donec enim diam vulputate ut. Libero nunc consequat
+    interdum varius sit amet. Lacinia at quis risus sed vulputate. Magna fermentum iaculis eu non diam phasellus
+    vestibulum lorem sed. Blandit turpis cursus in hac habitasse platea dictumst quisque. Odio morbi quis commodo odio.
+    Fermentum dui faucibus in ornare quam viverra orci. Sapien pellentesque habitant morbi tristique senectus et. Tempus
+    iaculis urna id volutpat lacus laoreet non curabitur gravida.
+
+    Metus dictum at tempor commodo ullamcorper a lacus vestibulum sed. Nibh tortor id aliquet lectus proin nibh. In
+    metus vulputate eu scelerisque felis imperdiet. Quis enim lobortis scelerisque fermentum dui faucibus in. Morbi
+    tempus iaculis urna id volutpat. Massa ultricies mi quis hendrerit dolor magna eget est lorem. Feugiat sed lectus
+    vestibulum mattis ullamcorper velit. Tempus imperdiet nulla malesuada pellentesque. A pellentesque sit amet
+    porttitor eget dolor morbi non arcu. Malesuada proin libero nunc consequat interdum varius. Fermentum iaculis eu non
+    diam phasellus vestibulum lorem. Feugiat nisl pretium fusce id velit ut tortor. Sit amet consectetur adipiscing elit
+    ut aliquam. Lacus sed turpis tincidunt id aliquet risus feugiat. Condimentum id venenatis a condimentum vitae sapien
+    pellentesque habitant. Mauris vitae ultricies leo integer malesuada nunc. Netus et malesuada fames ac turpis egestas
+    integer. Quam nulla porttitor massa id neque aliquam vestibulum. Augue interdum velit euismod in pellentesque massa
+    placerat duis ultricies.
+
+    Vivamus arcu felis bibendum ut. Enim blandit volutpat maecenas volutpat blandit aliquam. Facilisis volutpat est
+    velit egestas dui id. Velit sed ullamcorper morbi tincidunt ornare massa eget. Mattis enim ut tellus elementum
+    sagittis. Velit scelerisque in dictum non consectetur a erat. Rhoncus mattis rhoncus urna neque viverra justo nec
+    ultrices dui. Amet consectetur adipiscing elit pellentesque habitant morbi. Facilisis magna etiam tempor orci eu
+    lobortis. Quis hendrerit dolor magna eget est lorem ipsum dolor. Sit amet aliquam id diam maecenas ultricies.
+    Habitant morbi tristique senectus et netus et malesuada. Lobortis scelerisque fermentum dui faucibus in ornare quam.
+    Volutpat blandit aliquam etiam erat velit scelerisque. Feugiat nisl pretium fusce id velit ut tortor. Nisl nisi
+    scelerisque eu ultrices vitae. Placerat vestibulum lectus mauris ultrices eros. Aliquet sagittis id consectetur
+    purus ut faucibus pulvinar. Maecenas accumsan lacus vel facilisis volutpat est velit egestas. Purus non enim
+    praesent elementum facilisis leo.
+
+    Duis ut diam quam nulla porttitor massa id. Rhoncus urna neque viverra justo nec ultrices dui. Viverra accumsan in
+    nisl nisi scelerisque eu ultrices vitae. Non consectetur a erat nam at. Condimentum mattis pellentesque id nibh.
+    Elit eget gravida cum sociis natoque. Diam quam nulla porttitor massa id neque aliquam. Facilisis leo vel fringilla
+    est ullamcorper eget. Purus in massa tempor nec feugiat nisl. Mi bibendum neque egestas congue quisque egestas diam
+    in arcu. Mauris rhoncus aenean vel elit scelerisque mauris. Eu scelerisque felis imperdiet proin fermentum leo.
+    Adipiscing commodo elit at imperdiet dui accumsan. Sed adipiscing diam donec adipiscing tristique risus nec feugiat.
+    Vel eros donec ac odio tempor orci dapibus. Euismod elementum nisi quis eleifend quam adipiscing vitae. Pellentesque
+    dignissim enim sit amet venenatis urna cursus eget.
+
+    Dui id ornare arcu odio ut sem nulla. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Quis viverra nibh
+    cras pulvinar mattis nunc sed blandit libero. Et tortor at risus viverra adipiscing at. Porttitor massa id neque
+    aliquam. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis. Commodo ullamcorper a lacus vestibulum
+    sed arcu non. Tristique senectus et netus et malesuada. Commodo nulla facilisi nullam vehicula ipsum a arcu cursus
+    vitae. Ut pharetra sit amet aliquam id diam maecenas. Condimentum vitae sapien pellentesque habitant morbi tristique
+    senectus et. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Faucibus interdum posuere lorem
+    ipsum dolor sit amet consectetur.
+
+    Integer eget aliquet nibh praesent tristique magna sit. Neque laoreet suspendisse interdum consectetur libero id
+    faucibus nisl tincidunt. Metus vulputate eu scelerisque felis imperdiet. Arcu risus quis varius quam quisque id
+    diam. Eleifend mi in nulla posuere. Consectetur lorem donec massa sapien. Placerat duis ultricies lacus sed turpis.
+    In nulla posuere sollicitudin aliquam ultrices sagittis orci. Vestibulum sed arcu non odio. Urna porttitor rhoncus
+    dolor purus non. Arcu non sodales neque sodales ut etiam sit amet nisl.
+
+  </pre>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 <script src="./script.js"></script>
+
 
 </html>
