--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light dark-mode">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Corvius Solutions LLC</a>
+      <a class="navbar-brand" href="#">Stein Solutions LLC</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
         aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
